@@ -1,7 +1,7 @@
 {
   "name": "oliverklee/seminars",
   "type": "typo3-cms-extension",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This extension allows you to create and manage a list of seminars, workshops, lectures, theater performances and other events, allowing front-end users to sign up. FE users also can create and edit events.",
   "keywords": ["seminars", "workshops", "event", "registration", "education"],
   "homepage": "https://www.oliverklee.de",
