@@ -32,7 +32,7 @@ $EM_CONF[$_EXTKEY] = [
     'author_company' => 'oliverklee.de',
     'CGLcompliance' => '',
     'CGLcompliance_note' => '',
-    'version' => '1.0.0',
+    'version' => '1.0.1',
     '_md5_values_when_last_written' => '',
     'constraints' => [
         'depends' => [
